# Mnemos

./: Makefile  main.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/mnemos/adapter/: __init__.py  langgraph_agent.py
src/mnemos/adapter/gateway/: __init__.py  telegram.py
src/mnemos/core/: __init__.py  conversation_service.py
src/mnemos/protocols/: __init__.py  agent.py  event.py  llm_provider.py  message.py  messaging_gateway.py
src/mnemos/tools/: __init__.py  search.py
tests/fake/: __init__.py  fake_agent.py  fake_llm.py  fake_messaging_gateway.py  fake_tool.py
tests/integration/: test_langgraph_agent_memory.py  test_messaging_gateway.py
tests/unit/: test_conversation_service.py  test_langgraph_agent.py  test_messaging_gateway.py
