[project]
name = "mnemos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.8",
]

[dependency-groups]
dev = [
    "minport>=0.1.3",
    "pyrefly>=0.61.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff.lint]
# 全てのルールを有効化
select = ["ALL"]
