[project]
name = "mnemos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.1",
    "discord-py>=2.7.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.8",
]

[dependency-groups]
dev = [
    "minport>=0.1.3",
    "pyrefly>=0.61.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemos", "tests/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D107", "D203", "D213", "D400", "D415", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]
